# mini-recsys

./: .gitignore  Cargo.toml  README.md  build.rs
.cursor/rules/: minirecsys.md
assets/: products.json
cpp/: vector_ops.cpp  vector_ops.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
src/: embedding.rs  ffi.rs  hybrid.rs  main.rs  model.rs  service.rs  storage.rs  text_search.rs
