[package]
name = "mini-recsys"
version = "0.1.0"
edition = "2021"
description = "A hybrid Rust/C++ recommendation system demo for learning purposes"

[dependencies]
# Web Framework - 模块化和人体工学的 Web 框架
axum = "0.7"
# Async Runtime - 异步运行时
tokio = { version = "1.0", features = ["full"] }
# Serialization - JSON 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# FFI - 用于定义 C 类型
libc = "0.2"
# Random - 随机数生成
rand = "0.8"
# HTTP middleware - CORS 支持
tower-http = { version = "0.5", features = ["cors"] }
# Embedded Database - Sled 纯 Rust 嵌入式数据库
sled = "0.34"
# Binary Serialization - 高效二进制序列化
bincode = "1.3"
# Error Handling - 简化错误处理
anyhow = "1.0"
# Bloom Filter - 高效概率去重
fastbloom-rs = "0.5"
# ONNX Runtime - 模型推理
ort = { version = "2.0.0-rc.11" }
# Tokenizer - HuggingFace 分词器
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
# 张量处理
ndarray = "0.16"
# 全文搜索引擎
tantivy = "0.22"

[build-dependencies]
# C/C++ 编译支持 - 用于编译 C++ 代码并链接到 Rust
cc = "1.0"
